[refactor]: Write 기능 구현